// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
}

<h2
  class="emotion-0"
  data-test-id="cf-ui-subheading"
>
  Subheading
</h2>
`;

exports[`renders the component h3 1`] = `
.emotion-0 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
}

<h3
  class="emotion-0"
  data-test-id="cf-ui-subheading"
>
  Subheading
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
}

<h2
  class="my-extra-class emotion-0"
  data-test-id="cf-ui-subheading"
>
  Subheading
</h2>
`;
